# yescoin2

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.tx/: config
contrib/: README.md  bitcoin-qt.pro  qt_translations.py  tidy_datadir.sh  yescoind.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.lintian-overrides  bitcoind.bash-completion  bitcoind.examples  bitcoind.lintian-overrides  bitcoind.manpages  changelog  control  copyright  rules  watch  yescoin-qt.desktop  yescoin-qt.install  yescoin-qt.protocol  yescoind.install
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-yescoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md  release-notes-0.9.1.md  release-notes-0.9.2.1.md  release-notes-0.9.2.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-bitcoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  (+10 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bitcoind-res.rc  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  (+56 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h
src/crypto/: common.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha2.cpp  sha2.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: yescoin_find_bdb48.m4  yescoin_qt.m4  yescoin_subdir_to_include.m4
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.h  bitcoingui.h  bitcoinstrings.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  (+63 more)
src/qt/forms/: addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_eu_ES.ts  bitcoin_fa_IR.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_mn.ts  bitcoin_ms_MY.ts  bitcoin_nl.ts  bitcoin_pam.ts  bitcoin_pl.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_sk.ts  bitcoin_sv.ts  bitcoin_th_TH.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: Makefile  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_yescoin.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md
(+17 files in other folders)
